gcc/testsuite/algol68/compile/error-attr-format-token-1.a68
begin mode Set = struct (string class, ref[]int elems);
      Set empty_set
         = ("", heap[1:0]Elems); { dg-error "collateral clause" }
      skip
end
